# LocalGhost

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements-py310.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: client_example.py  demo.html  hello_plugin.py
src/localghost/: __init__.py  __main__.py  _postinstall.py  config.py  server.py  tray.py
src/localghost/auth/: __init__.py  middleware.py  permissions.py  tokens.py
src/localghost/consent/: __init__.py  handler.py  prompt.py
src/localghost/plugins/: __init__.py  base.py  demo.py  registry.py
src/localghost/service/: __init__.py  daemon.py  linux.py  macos.py  windows.py
src/localghost/static/: demo.html
tests/: __init__.py  test_permissions.py  test_server.py  test_tokens.py
